#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æ›´æ–°ç¬¬ä¸‰æ‰¹è¿ç§»çŠ¶æ€
"""

import sqlite3
from pathlib import Path

class MigrationStatusUpdater:
    """è¿ç§»çŠ¶æ€æ›´æ–°å™¨"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
    
    def _connect(self):
        """è¿æ¥åˆ°æ•°æ®åº“"""
        conn = sqlite3.connect(self.db_path)
        conn.row_factory = sqlite3.Row
        return conn
    
    def add_batch(self, batch_number: int, batch_name: str, description: str):
        """æ·»åŠ æ‰¹æ¬¡"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # æ£€æŸ¥æ‰¹æ¬¡æ˜¯å¦å·²å­˜åœ¨
        cursor.execute('SELECT id FROM migration_batches WHERE batch_number = ?', (batch_number,))
        existing = cursor.fetchone()
        
        if existing:
            print(f"âš ï¸  æ‰¹æ¬¡ {batch_number} å·²å­˜åœ¨ï¼Œè·³è¿‡æ·»åŠ ")
            conn.close()
            return
        
        cursor.execute('''
            INSERT INTO migration_batches (batch_number, batch_name, description, status, start_time)
            VALUES (?, ?, ?, 'in_progress', CURRENT_TIMESTAMP)
        ''', (batch_number, batch_name, description))
        
        conn.commit()
        conn.close()
        print(f"âœ… æ·»åŠ æ‰¹æ¬¡ {batch_number}: {batch_name}")
    
    def add_proto_message(self, message_name: str, file_path: str, package_name: str, field_count: int):
        """æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # æ£€æŸ¥æ¶ˆæ¯æ˜¯å¦å·²å­˜åœ¨
        cursor.execute('SELECT id FROM proto_messages WHERE message_name = ?', (message_name,))
        existing = cursor.fetchone()
        
        if existing:
            conn.close()
            return existing['id']
        
        cursor.execute('''
            INSERT INTO proto_messages (message_name, file_path, package_name, field_count)
            VALUES (?, ?, ?, ?)
        ''', (message_name, file_path, package_name, field_count))
        
        conn.commit()
        proto_id = cursor.lastrowid
        conn.close()
        return proto_id
    
    def add_migration_record(self, batch_id: int, jprotobuf_name: str, proto_name: str, proto_file: str):
        """æ·»åŠ è¿ç§»è®°å½•"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # è·å– JProtobuf æ¶ˆæ¯ ID
        cursor.execute('SELECT id FROM jprotobuf_messages WHERE message_name = ?', (jprotobuf_name,))
        jprotobuf_row = cursor.fetchone()
        
        if not jprotobuf_row:
            print(f"âš ï¸  æœªæ‰¾åˆ° JProtobuf æ¶ˆæ¯: {jprotobuf_name}")
            conn.close()
            return
        
        jprotobuf_id = jprotobuf_row['id']
        
        # è·å–æ ‡å‡† Protobuf æ¶ˆæ¯ ID
        cursor.execute('SELECT id FROM proto_messages WHERE message_name = ?', (proto_name,))
        proto_row = cursor.fetchone()
        
        if not proto_row:
            print(f"âš ï¸  æœªæ‰¾åˆ°æ ‡å‡† Protobuf æ¶ˆæ¯: {proto_name}")
            conn.close()
            return
        
        proto_id = proto_row['id']
        
        # æ£€æŸ¥è¿ç§»è®°å½•æ˜¯å¦å·²å­˜åœ¨
        cursor.execute('''
            SELECT id FROM migration_records 
            WHERE jprotobuf_message_id = ? AND proto_message_id = ?
        ''', (jprotobuf_id, proto_id))
        existing = cursor.fetchone()
        
        if existing:
            conn.close()
            return
        
        # æ·»åŠ æ˜ å°„å…³ç³»
        cursor.execute('''
            INSERT INTO message_mappings (jprotobuf_message_id, proto_message_id, mapping_type, mapping_confidence, is_verified)
            VALUES (?, ?, 'direct_mapping', 1.0, 1)
        ''', (jprotobuf_id, proto_id))
        
        # æ·»åŠ è¿ç§»è®°å½•
        cursor.execute('''
            INSERT INTO migration_records (batch_id, jprotobuf_message_id, proto_message_id, migration_status)
            VALUES (?, ?, ?, 'completed')
        ''', (batch_id, jprotobuf_id, proto_id))
        
        conn.commit()
        conn.close()
        print(f"âœ… æ·»åŠ è¿ç§»è®°å½•: {jprotobuf_name} â†’ {proto_name}")
    
    def update_batch_status(self, batch_number: int, status: str):
        """æ›´æ–°æ‰¹æ¬¡çŠ¶æ€"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            UPDATE migration_batches 
            SET status = ?, end_time = CURRENT_TIMESTAMP
            WHERE batch_number = ?
        ''', (status, batch_number))
        
        conn.commit()
        conn.close()
        print(f"âœ… æ›´æ–°æ‰¹æ¬¡ {batch_number} çŠ¶æ€ä¸º: {status}")

def main():
    """ä¸»å‡½æ•°"""
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    updater = MigrationStatusUpdater(db_path)
    
    print("ğŸ“ æ›´æ–°ç¬¬ä¸‰æ‰¹è¿ç§»çŠ¶æ€...")
    print()
    
    # æ·»åŠ æ‰¹æ¬¡
    print("1. æ·»åŠ æ‰¹æ¬¡...")
    updater.add_batch(3, 'ITEM', 'ITEM æ¨¡å—è¿ç§» - P1 ä¼˜å…ˆçº§')
    print()
    
    # æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯
    print("2. æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯...")
    updater.add_proto_message('AddWatchingBookmarkRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 1)
    updater.add_proto_message('AdventurebookSpecialRewardRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 5)
    updater.add_proto_message('AdventurebookTeraRewardRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 2)
    updater.add_proto_message('AdventureAutoSearchMiniGameRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 0)
    updater.add_proto_message('AdventureAutoSearchRewardRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 2)
    updater.add_proto_message('AdventureDataRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 0)
    updater.add_proto_message('AdventureUnionRepresentCharacterChangeRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 1)
    updater.add_proto_message('AdventureUnionSetCollectionSlotRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 2)
    updater.add_proto_message('ApplyGuildNpcSkinRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 1)
    updater.add_proto_message('ArrangeGuildStructureRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 4)
    updater.add_proto_message('ArtifactEquippedOptionChangeRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 3)
    updater.add_proto_message('ArtifactInvenOptionChangeRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 1)
    updater.add_proto_message('AuctionDetailItemListRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 3)
    updater.add_proto_message('BattlePassRankingRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 0)
    updater.add_proto_message('BilingInfoRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 4)
    updater.add_proto_message('BilingKrVerifyRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 6)
    updater.add_proto_message('BlackDiamonGetBucketRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 0)
    updater.add_proto_message('BlackDiamonGetRewardRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 1)
    updater.add_proto_message('BuyTicketRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 2)
    updater.add_proto_message('CancelAttackSquadJoinRequest', 'proto/dnf/v1/item.proto', 'dnf.v1', 2)
    print()
    
    # æ·»åŠ è¿ç§»è®°å½•
    print("3. æ·»åŠ è¿ç§»è®°å½•...")
    updater.add_migration_record(3, 'REQ_ADD_WATCHING_BOOKMARK', 'AddWatchingBookmarkRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTUREBOOK_SPECIAL_REWARD', 'AdventurebookSpecialRewardRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTUREBOOK_TERA_REWARD', 'AdventurebookTeraRewardRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTURE_AUTO_SEARCH_MINI_GAME', 'AdventureAutoSearchMiniGameRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTURE_AUTO_SEARCH_REWARD', 'AdventureAutoSearchRewardRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTURE_DATA', 'AdventureDataRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTURE_UNION_REPRESENT_CHARACTER_CHANGE', 'AdventureUnionRepresentCharacterChangeRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ADVENTURE_UNION_SET_COLLECTION_SLOT', 'AdventureUnionSetCollectionSlotRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_APPLY_GUILD_NPC_SKIN', 'ApplyGuildNpcSkinRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ARRANGE_GUILD_STRUCTURE', 'ArrangeGuildStructureRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ARTIFACT_EQUIPPED_OPTION_CHANGE', 'ArtifactEquippedOptionChangeRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_ARTIFACT_INVEN_OPTION_CHANGE', 'ArtifactInvenOptionChangeRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_AUCTION_DETAIL_ITEM_LIST', 'AuctionDetailItemListRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_BATTLE_PASS_RANKING', 'BattlePassRankingRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_BILING_INFO', 'BilingInfoRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_BILING_KR_VERIFY', 'BilingKrVerifyRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_BLACK_DIAMON_GET_BUCKET', 'BlackDiamonGetBucketRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_BLACK_DIAMON_GET_REWARD', 'BlackDiamonGetRewardRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_BUY_TICKET', 'BuyTicketRequest', 'proto/dnf/v1/item.proto')
    updater.add_migration_record(3, 'REQ_CANCEL_ATTACK_SQUAD_JOIN', 'CancelAttackSquadJoinRequest', 'proto/dnf/v1/item.proto')
    print()
    
    # æ›´æ–°æ‰¹æ¬¡çŠ¶æ€
    print("4. æ›´æ–°æ‰¹æ¬¡çŠ¶æ€...")
    updater.update_batch_status(3, 'completed')
    print()
    
    print("âœ… ç¬¬ä¸‰æ‰¹è¿ç§»çŠ¶æ€æ›´æ–°å®Œæˆï¼")

if __name__ == '__main__':
    main()
